gitops/demoapp/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: demoapp
  labels:
    env: dev
