gitops/demoapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp-service
  namespace: demoapp
  labels:
    app: demoapp
spec:
  type: ClusterIP
  selector:
    app: demoapp
  ports:
    - port: 80
      targetPort: 80
