gitops/demoapp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp-ingress-service
  namespace: demoapp
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    cert-manager.io/common-name: demoapp.demoaks.com
    cert-manager.io/duration: 720h
    # cert-manager.io/issuer: my-ca-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: demoappx.demoaks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demoapp-service
                port: 
                  number: 80
  tls:
  - hosts:
    - demoapp.demoaks.com
    secretName: demoapp-secret
